--- a/src/GUI/change_password.fxml
+++ b/src/GUI/change_password.fxml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Change_passwordController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffc13b;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Change_passwordController">
    <children>
-      <Label layoutX="84.0" layoutY="116.0" text="password" />
-      <Label layoutX="84.0" layoutY="192.0" text="confirm password" />
-      <Button fx:id="submit" layoutX="241.0" layoutY="259.0" mnemonicParsing="false" onAction="#reset_password" text="submit" />
-      <PasswordField fx:id="password" layoutX="200.0" layoutY="112.0" />
-      <PasswordField fx:id="confirm_password" layoutX="200.0" layoutY="188.0" />
+      <VBox layoutX="186.0" layoutY="61.0" prefHeight="262.0" prefWidth="228.0" spacing="50.0" style="-fx-background-color: #F9E4B7;">
+         <children>
+            <PasswordField fx:id="password" prefHeight="25.0" prefWidth="102.0" promptText="password">
+               <VBox.margin>
+                  <Insets top="50.0" />
+               </VBox.margin>
+            </PasswordField>
+            <PasswordField fx:id="confirm_password" layoutX="50.0" prefHeight="6.0" prefWidth="98.0" promptText="confirm password">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </PasswordField>
+            <Button fx:id="submit" mnemonicParsing="false" onAction="#reset_password" styleClass="search-button" stylesheets="@../stylesheet/style.css" text="Change Password">
+               <VBox.margin>
+                  <Insets left="50.0" top="30.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
+      <Label alignment="CENTER" layoutX="201.0" layoutY="14.0" prefHeight="35.0" prefWidth="153.0" text="Enter your new password" />
    </children>
 </AnchorPane>
