--- a/src/GUI/AfficheReservationClientHotel.fxml
+++ b/src/GUI/AfficheReservationClientHotel.fxml
@@ -25,7 +25,7 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <JFXButton layoutX="474.0" layoutY="467.0" onAction="#Delete" prefHeight="44.0" prefWidth="124.0" style="-fx-background-color: #c9599c;" stylesheets="@Style.css" text="Supprimer">
+      <JFXButton layoutX="474.0" layoutY="467.0" onAction="#Deletee" prefHeight="44.0" prefWidth="124.0" style="-fx-background-color: #c9599c;" stylesheets="@Style.css" text="Supprimer">
          <styleClass>
             <String fx:value="search-button" />
             <String fx:value="shadow" />
