--- a/src/GUI/UserInterface.fxml
+++ b/src/GUI/UserInterface.fxml
@@ -12,6 +12,10 @@
 
 <AnchorPane id="AnchorPane" prefHeight="662.0" prefWidth="1245.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.UserInterfaceController">
    <children>
+      <AnchorPane id="AnchorPane" prefHeight="681.0" prefWidth="1244.0" stylesheets="@../pictures/style.css">
+         <children>
+            <AnchorPane fx:id="view" layoutX="175.0" layoutY="81.0" prefHeight="606.0" prefWidth="1077.0" />
+
       <AnchorPane id="AnchorPane" prefHeight="681.0" prefWidth="1244.0">
          <children>
 
@@ -26,6 +30,8 @@
                   <Pane layoutY="-1.0" prefHeight="31.0" prefWidth="1039.0" style="-fx-background-color: #76b776;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
                      <children>
                         <ImageView fx:id="Exit" fitHeight="22.0" fitWidth="22.0" layoutX="1193.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+ 
+
 
 
                         <ImageView fx:id="Exit" fitHeight="22.0" fitWidth="22.0" layoutX="1193.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
@@ -43,6 +49,12 @@
                   </Pane>
                   <HBox layoutX="203.0" layoutY="30.0" prefHeight="61.0" prefWidth="1042.0" AnchorPane.bottomAnchor="-8.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="30.0">
                      <children>
+                        <JFXButton prefHeight="38.0" prefWidth="139.0" styleClass="menuItem" text="Reclamation">
+                           <graphic>
+                              <ImageView fitHeight="22.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../Images/6982002.png" />
+
                         <JFXButton fx:id="mesreservations" alignment="BASELINE_LEFT" onAction="#gotomesreserv" prefHeight="38.0" prefWidth="154.0" styleClass="sidebarItem" text="Mes réservations" translateX="10.0">
                         <JFXButton fx:id="hotel3" onAction="#gotoHotelad" prefHeight="38.0" prefWidth="139.0" styleClass="menuItem" text="Reclamation">
                            <graphic>
@@ -53,6 +65,8 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXButton prefHeight="38.0" prefWidth="135.0" styleClass="menuItem" text="Restaurant" translateX="10.0">
+
 
                         <JFXButton fx:id="Ajout" contentDisplay="CENTER" onAction="#gotoHotelAjout" prefHeight="38.0" prefWidth="98.0" styleClass="menuItem" text="Restaurant" textAlignment="CENTER" translateX="10.0">
 
@@ -64,6 +78,8 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXButton prefHeight="42.0" prefWidth="104.0" styleClass="menuItem" text="Hôtel" translateX="10.0">
+
                         <JFXButton fx:id="stat" onAction="#gotostat" prefHeight="42.0" prefWidth="104.0" styleClass="menuItem" text="Hôtel" translateX="10.0">
                            <graphic>
                               <ImageView fitHeight="32.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
@@ -73,6 +89,8 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXButton alignment="BASELINE_LEFT" prefHeight="40.0" prefWidth="107.0" styleClass="sidebarItem" text="Voyage" translateX="10.0">
+
 
                         <JFXButton fx:id="btn_vol" alignment="BASELINE_LEFT" onAction="#getVolsinterface" prefHeight="40.0" prefWidth="107.0" styleClass="sidebarItem" text="Voyage" translateX="10.0">
 
@@ -84,6 +102,8 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXButton fx:id="Eventss" onAction="#gotoEventss" prefHeight="38.0" prefWidth="143.0" styleClass="menuItem" text="Evenement" translateX="10.0">
+
                         <JFXButton fx:id="hotel" onAction="#gotoHotelad" prefHeight="38.0" prefWidth="143.0" styleClass="menuItem" text="Evenement" translateX="10.0">
                            <graphic>
                               <ImageView fitHeight="22.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
@@ -93,6 +113,8 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXButton prefHeight="38.0" prefWidth="159.0" styleClass="menuItem" text="Monument">
+
                         <JFXButton fx:id="hotel1" onAction="#gotoHotelad" prefHeight="38.0" prefWidth="159.0" styleClass="menuItem" text="Monument">
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
@@ -102,6 +124,8 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXButton prefHeight="38.0" prefWidth="159.0" styleClass="menuItem" text="Espace culturel">
+
                         <JFXButton fx:id="hotel2" onAction="#gotoHotelad" prefHeight="38.0" prefWidth="159.0" styleClass="menuItem" text="Espace culturel">
                            <graphic>
                               <ImageView fitHeight="22.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
@@ -111,6 +135,8 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXButton alignment="BASELINE_LEFT" prefHeight="38.0" prefWidth="91.0" styleClass="sidebarItem" text="Profil" translateX="10.0">
+
 
                         <JFXButton alignment="BASELINE_LEFT" prefHeight="38.0" prefWidth="91.0" styleClass="sidebarItem" text="Profil" translateX="10.0">
 
@@ -122,6 +148,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+
 
 
                         <JFXButton fx:id="changePassword" onAction="#GoToChangePassword" prefHeight="38.0" prefWidth="139.0" styleClass="menuItem" text="Change Password">
@@ -175,6 +202,8 @@
                <children>
                   <VBox layoutY="27.0" prefHeight="649.0" prefWidth="189.0" AnchorPane.bottomAnchor="44.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="27.0">
                      <children>
+                        <JFXButton fx:id="Events" alignment="BASELINE_LEFT" onAction="#gotoevents" prefHeight="38.0" prefWidth="176.0" styleClass="sidebarItem" text="Evenement" textFill="WHITE">
+
                         <JFXButton alignment="BASELINE_LEFT" prefHeight="38.0" prefWidth="176.0" styleClass="sidebarItem" text="Restaurant" textFill="WHITE">
 
 
@@ -207,6 +236,8 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXButton fx:id="btn_calendar" alignment="BASELINE_LEFT" onAction="#gotocalendar" prefHeight="53.0" prefWidth="176.0" styleClass="sidebarItem" text="Calendrier" textFill="WHITE">
+
                         <JFXButton fx:id="monument" alignment="BASELINE_LEFT" onAction="#gotomonument" prefHeight="53.0" prefWidth="176.0" styleClass="sidebarItem" text="Monument" textFill="WHITE">
 
 
@@ -223,6 +254,8 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXButton fx:id="btn_search" alignment="BASELINE_LEFT" onAction="#searchevents" prefHeight="38.0" prefWidth="176.0" styleClass="sidebarItem" text="Recherhcher" textFill="WHITE">
+
                         <JFXButton fx:id="espace" alignment="BASELINE_LEFT" onAction="#gotoespace" prefHeight="38.0" prefWidth="176.0" styleClass="sidebarItem" text="Espace culturel" textFill="WHITE">
 
                         <JFXButton fx:id="btn_plan" alignment="BASELINE_LEFT" onAction="#getPlan" prefHeight="38.0" prefWidth="176.0" styleClass="sidebarItem" text="Plan personel" textFill="WHITE">
@@ -256,8 +289,11 @@
                   </VBox>
                </children>
             </AnchorPane>
+ gestion_evenement
+
             <AnchorPane fx:id="view" layoutX="176.0" layoutY="85.0" prefHeight="599.0" prefWidth="767.0" />
 
+ 
          </children>
       </AnchorPane>
    </children>
